# esp32_wifi_ota

./: README.md  sdkconfig  sdkconfig.old
main/: AccessPointMode.c  CMakeLists.txt  StationMode.c  StationMode.h  TcpServer.c  TcpServer.h  UdpServer.c  UdpServer.h  constants.h  context.h  main.c  udp_response_handler.c  udp_response_handler.h  wifi_info_handler.h
main/ota_lib/: tcp_ota_handler.c  tcp_ota_handler.h
