idf_component_register(SRCS 

"StationMode.c"
"AccessPointMode.c"
"TcpServer.c"
"UdpServer.c"
"udp_response_handler.c"
"wifi_info_handler.c"
"main.c"
"constants.c"
"GPIO.c"
"ota_lib/tcp_ota_handler.c"
"ota_lib/ota_handler.c"
"ota_lib/flash_boot_handler.c"
"checksum_handler.c"
                       INCLUDE_DIRS ".")
